[package]
name = "BEAMinject"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[dependencies]
libdopamine = { git = "https://github.com/OpenM-Project/libdopamine.git" }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
regex = "1.*"
hex = "0.*"
lazy_static = "1.*"
clap = { version = "4.*", features = ["derive"] }
